k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-api
  template:
    metadata:
      labels:
        app: mini-api
    spec:
      containers:
      - name: api
        image: mini-api
        ports:
        - containerPort: 80
