k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-pipeline-service
spec:
  selector:
    app: mini-pipeline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
